--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,32 @@
 ---
 language: ruby
+cache: bundler
+sudo: false
 bundler_args: --without development
 before_install: rm Gemfile.lock || true
-rvm:
-  - 1.8.7
-  - 1.9.3
-  - 2.0.0
-  - 2.1.0
 script: bundle exec rake test
-env:
-  - PUPPET_VERSION="~> 3.5.0"
-  - PUPPET_VERSION="~> 3.6.0"
-  - PUPPET_VERSION="~> 3.7.0"
+matrix:
+  fast_finish: true
+  include:
+  - rvm: 1.9.3
+    env: PUPPET_VERSION="~> 3.3.0"
+  - rvm: 1.9.3
+    env: PUPPET_VERSION="~> 3.0" FUTURE_PARSER="yes"
+  - rvm: 2.0.0
+    env: PUPPET_VERSION="~> 3.3.0"
+  - rvm: 2.0.0
+    env: PUPPET_VERSION="~> 3.0" FUTURE_PARSER="yes"
+  - rvm: 2.1.0
+    env: PUPPET_VERSION="~> 3" FUTURE_PARSER="yes"
+  - rvm: 2.1.8
+    env: PUPPET_VERSION="~> 4.0"
+  - rvm: 2.1.8
+    env: PUPPET_VERSION="~> 4"
+  - rvm: 2.2.4
+    env: PUPPET_VERSION="~> 4.0"
+  - rvm: 2.2.4
+    env: PUPPET_VERSION="~> 4"
+  - rvm: 2.3.0
+    env: PUPPET_VERSION="~> 4.0"
+  - rvm: 2.3.0
+    env: PUPPET_VERSION="~> 4"
