--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ matrix:
   fast_finish: true
   include:
   - rvm: 2.0.0
+    env: PUPPET_VERSION="~> 3.0" FUTURE_PARSER="yes"
+  - rvm: 2.0.0
     env: PUPPET_VERSION="~> 3.3.0"
   - rvm: 2.0.0
-    env: PUPPET_VERSION="~> 3.0" FUTURE_PARSER="yes"
+    env: PUPPET_VERSION="~> 3.7"
   - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3" FUTURE_PARSER="yes"
   - rvm: 2.1.8
